行政訴訟法 2009.12.22

--- a/司法-行政訴訟/行政訴訟法.md
+++ b/司法-行政訴訟/行政訴訟法.md
@@ -8,7 +8,9 @@
 
 * 5 人民因中央或地方機關對其依法申請之案件，於法令所定期間內應作為而不作為，認為其權利或法律上利益受損害者，經依訴願程序後，得向高等行政法院提起請求該機關應為行政處分或應為特定內容之行政處分之訴訟。人民因中央或地方機關對其依法申請之案件，予以駁回，認為其權利或法律上利益受違法損害者，經依訴願程序後，得向高等行政法院提起請求該機關應為行政處分或應為特定內容之行政處分之訴訟。
 
-* 6 確認行政處分無效及確認公法上法律關係成立或不成立之訴訟，非原告有即受確認判決之法律上利益者，不得提起之。其確認已執行完畢或因其他事由而消滅之行政處分為違法之訴訟，亦同。確認行政處分無效之訴訟，須已向原處分機關請求確認其無效未被允許，或經請求後於三十日內不為確答者，始得提起之。確認公法上法律關係成立或不成立之訴訟，於原告得提起撤銷訴訟者，不得提起之。確認訴訟以高等行政法院為第一審管轄法院。應提起撤銷訴訟，誤為提起確認行政處分無效之訴訟，其未經訴願程序者，高等行政法院應以裁定將該事件移送於訴願管轄機關，並以行政法院收受訴狀之時，視為提起訴願。
+* 6 確認行政處分無效及確認公法上法律關係成立或不成立之訴訟，非原告有即受確認判決之法律上利益者，不得提起之。其確認已執行而無回復原狀可能之行政處分或已消滅之行政處分為違法之訴訟，亦同。確認行政處分無效之訴訟，須已向原處分機關請求確認其無效未被允許，或經請求後於三十日內不為確答者，始得提起之。確認訴訟，於原告得提起或可得提起撤銷訴訟、課予義務訴訟或一般給付訴訟者，不得提起之。但確認行政處分無效之訴訟，不在此限。應提起撤銷訴訟、課予義務訴訟，誤為提起確認行政處分無效之訴訟，其未經訴願程序者，高等行政法院應以裁定將該事件移送於訴願管轄機關，並以行政法院收受訴狀之時，視為提起訴願。
+
+> 釋：一、行政處分已執行與行政處分消滅不同，依第一百九十六條規定之意旨，已執行之行政處分，如有回復原狀之可能，仍可提起撤銷訴訟，原第一項後段規定「確認已執行完畢或因其他事由而消滅之行政處分為違法之訴訟」，易滋行政處分已執行亦屬消滅之事由，且均得提起確認訴訟之誤會，爰予修正，期臻明確。二、又本條第三項原規定確認訴訟之補充性，限於「確認公法上法律關係成立或不成立之訴訟」，並不及於第一項後段之確認行政處分違法之訴訟。而認定行政處分是否違法，已有撤銷訴訟作為權利保護方式，如其得提起撤銷訴訟，卻逕行提起確認訴訟，或原得提起撤銷訴訟而怠於為之，至撤銷訴訟已無法提起時，始提起確認訴訟，不僅混淆行政訴訟權利保護之機制，且將使「確認已執行而無回復原狀可能之行政處分或已消滅之行政處分為違法之訴訟」既無期間之限制，亦不受補充性之限制，恐將有失法律秩序之安定性，爰將原第三項「確認公法上法律關係成立或不成立之訴訟」，修正為「確認訴訟」，並設但書排除確認行政處分無效之訴訟，以符法理。又確認訴訟之補充性，理論上不僅係對於撤銷訴訟而言，基於訴訟經濟及最大法律保護原則之要求，如得提起課予義務訴訟或一般給付訴訟者，亦不得提起確認訴訟。原第三項僅規定確認訴訟對於撤銷訴訟之補充性，未顧及課予義務訴訟及一般給付訴訟，亦欠周全，爰併予修正增列。三、按本法所定各類型之行政訴訟均以高等行政法院為第一審管轄法院，非確認訴訟獨然，原第四項規定自有贅累，爰予刪除。四、課予義務訴訟與撤銷訴訟同，亦應經訴願程序，爰於第四項增列之。
 
 * 7 提起行政訴訟，得於同一程序中，合併請求損害賠償或其他財產上給付。
 
@@ -26,33 +28,55 @@
 
 > 釋：一、本條新增。二、基於訴訟經濟及程序安定性之考量，受訴法院於起訴時有審判權者，不應因訴訟繫屬後事實及法律狀態變更而變成無審判權，爰參酌德國法院組織法第十七條第一項第一句規定，於第一項規定起訴時法院有受理訴訟權限者，不因訴訟繫屬後事實及法律狀態變更而受影響。三、為使行政法院就審判權之有無，能儘速以第十二條之二之方式確定，應使訴訟繫屬有「法律救濟途徑障礙」之法律效果，即訴訟經繫屬後，當事人不得向不同審判權之法院更行起訴，爰參酌德國法院組織法第十七條第一項第二句之規定，於第二項明定之。
 
-* 12.2 行政法院認其有受理訴訟權限而為裁判經確定者，其他法院受該裁判之羈束。行政法院認其無受理訴訟權限者，應依職權以裁定將訴訟移送至有受理訴訟權限之管轄法院。數法院有管轄權而原告有指定者，移送至指定之法院。移送之裁定確定時，受移送之法院認其亦無受理訴訟權限者，應以裁定停止訴訟程序，並聲請司法院大法官解釋。受移送之法院經司法院大法官解釋無受理訴訟權限者，應再行移送至有受理訴訟權限之法院。當事人就行政法院有無受理訴訟權限有爭執者，行政法院應先為裁定。行政法院為第二項及前項之裁定前，應先徵詢當事人之意見。
+* 12.2 行政法院認其有受理訴訟權限而為裁判經確定者，其他法院受該裁判之羈束。行政法院認其無受理訴訟權限者，應依職權以裁定將訴訟移送至有受理訴訟權限之管轄法院。數法院有管轄權而原告有指定者，移送至指定之法院。移送之裁定確定時，受移送之法院認其亦無受理訴訟權限者，應以裁定停止訴訟程序，並聲請司法院大法官解釋。受移送之法院經司法院大法官解釋無受理訴訟權限者，應再行移送至有受理訴訟權限之法院。當事人就行政法院有無受理訴訟權限有爭執者，行政法院應先為裁定。前項裁定，得為抗告。行政法院為第二項及第五項之裁定前，應先徵詢當事人之意見。
 
-> 釋：一、本條新增。二、為儘速確定審判權，如果行政法院已認定其有審判權並進而為裁判經確定者，即不容再由其他審判權法院為相異之認定，應受該裁判之羈束，爰參酌德國法院組織法第十七條之一第一項之規定，於第一項明定之。三、為不使訴訟審判權歸屬認定困難之不利益由當事人負擔，如行政法院認其對訴訟無審判權，應依職權以裁定移送至有審判權法院。有審判權之管轄法院有數個，而原告有所指定時，應移送至原告所指定之法院，爰參酌司法院釋字第五四○號解釋意旨，於第二項明定之。四、訴訟移送之裁定確定後，如受移送法院亦認其有審判權，訴訟由其審判固無問題。惟如受移送法院認其無審判權，則由其以裁定停止訴訟程序，並聲請司法院大法官解釋，以終局確定審判權之歸屬，爰於第三項明定之。五、受移送法院如依第三項聲請司法院大法官解釋，如確定其有審判權，則由其審判；如確定其無審判權，則原移送之裁定失其效力，由受移送法院再行移送至有審判權之法院，爰於第四項明定之。六、為使行政法院有無審判權能儘速確定，參酌德國法院組織法第十七條之一第三項第二句規定，於第五項規定如當事人對行政法院有無審判權有爭執者，行政法院應就此部分先為裁定。如行政法院認其無審判權，自應依第二項為之。如行政法院認其有審判權之裁定確定，依第一項之規定，其他法院受該裁定之羈束。七、為保障當事人之程序上權利，及確保法院關於審判權有無之判斷正確，第六項規定行政法院為第二項及第五項之裁定前，應先徵詢當事人之意見。
+> 釋：一、本條第三項僅規定當事人就行政法院有無受理訴訟權限有爭執時，行政法院應先為裁定，惟對此裁定得否抗告，本法並未明定，爰參考民事訴訟法第三十一條之二第四項之規定，增訂第六項。二、原第六項移至第七項，並將「前項」修正為「第五項」，以配合項次調整。
 
 * 12.3 移送訴訟前如有急迫情形，行政法院應依當事人聲請或依職權為必要之處分。移送訴訟之裁定確定時，視為該訴訟自始即繫屬於受移送之法院。前項情形，行政法院書記官應速將裁定正本附入卷宗，送交受移送之法院。
 
 > 釋：一、本條新增。二、第一項參照行政訴訟法第十八條、民事訴訟法第二十九條，規定移送訴訟前如有急迫情形，行政法院應依當事人聲請或依職權為必要之處分，以保障當事人權益。三、第二項規定移送訴訟之效力，即移送訴訟之裁定確定時，視為該訴訟自始即繫屬於受移送之法院。四、第三項參照行政訴訟法第十八條、民事訴訟法第三十一條，規定移送訴訟之裁定確定時，行政法院書記官應速將裁定正本附入卷宗，送交受移送之法院。
 
-* 12.4 行政法院將訴訟移送至其他法院者，依受移送法院應適用之訴訟法定其訴訟費用之徵收。移送前所生之訴訟費用視為受移送法院訴訟費用之一部分。應行徵收之訴訟費用，行政法院未加徵收、徵收不足額或徵收超額者，受移送法院應補行徵收或退還超額部分。
+* 12.4 行政法院將訴訟移送至其他法院者，依受移送法院應適用之訴訟法定其訴訟費用之徵收。移送前所生之訴訟費用視為受移送法院訴訟費用之一部分。應行徵收之訴訟費用，行政法院未加徵收、徵收不足額或溢收者，受移送法院應補行徵收或退還溢收部分。
 
-> 釋：一、本條新增。二、不同審判權法院之訴訟費用規定並不相同，當行政法院將訴訟移送至其他法院時，自應依受移送法院應適用之訴訟法定其訴訟費用之徵收。而在行政法院之訴訟程序中，可能已發生訴訟費用，此訴訟費用應列為受移送法院訴訟程序中之訴訟費用，爰於第一項明定之。三、應行徵收之訴訟費用，行政法院未加徵收、徵收不足額或徵收超額者，自應由受移送法院補行徵收或退還超額部分，爰於第二項明定之。
+> 釋：釐清條文用語，參考民事訴訟法第三十一條之三之規定，將第二項之「徵收超額」或「超額」，修正為「溢收」。
+
+* 12.5 其他法院將訴訟移送至行政法院者，依本法定其訴訟費用之徵收。移送前所生之訴訟費用視為行政法院訴訟費用之一部分。應行徵收之訴訟費用，其他法院未加徵收、徵收不足額或溢收者，行政法院應補行徵收或退還溢收部分。
+
+> 釋：一、本條新增。二、關於其他法院移送至行政法院之事件，於移送前所生費用或其他法院未加徵收、徵收不足額、溢收時，應如何處理，本法並未規定，爰參考民事訴訟法第三十一條之三之規定，增訂本條。
 
 * 13 對於公法人之訴訟，由其公務所所在地之行政法院管轄。其以公法人之機關為被告時，由該機關所在地之行政法院管轄。對於私法人或其他得為訴訟當事人之團體之訴訟，由其主事務所或主營業所所在地之行政法院管轄。對於外國法人或其他得為訴訟當事人之團體之訴訟，由其在中華民國之主事務所或主營業所所在地之行政法院管轄。
 
 * 14 前條以外之訴訟，由被告住所地之行政法院管轄，其住所地之行政法院不能行使職權者，由其居所地之行政法院管轄。被告在中華民國現無住所或住所不明者，以其在中華民國之居所，視為其住所；無居所或居所不明者，以其在中華民國最後之住所，視為其住所；無最後住所者，以中央政府所在地，視為其最後住所地。訴訟事實發生於被告居所地者，得由其居所地之行政法院管轄。
 
-* 15 因不動產之公法上權利或法律關係涉訟者，專屬不動產所在地之行政法院管轄。
+* 15 因不動產徵收、徵用或撥用之訴訟，專屬不動產所在地之行政法院管轄。除前項情形外，其他有關不動產之公法上權利或法律關係涉訟者，得由不動產所在地之行政法院管轄。
 
-* 16 有左列各款情形之一者，最高行政法院應依當事人之聲請或受訴行政法院之請求，指定管轄：一、有管轄權之行政法院因法律或事實不能行審判權者。二、因管轄區域境界不明，致不能辨別有管轄權之行政法院者。三、因特別情形由有管轄權之行政法院審判，恐影響公安或難期公平者。前項聲請得向受訴行政法院或最高行政法院為之。
+> 釋：本條原規定屬於專屬管轄者為「因不動產之公法上權利或法律關係涉訟者」，惟依此文義，其適用範圍過廣。爰於第一項修正為限於因不動產徵收、徵用或撥用之訴訟，始專屬不動產所在地之行政法院管轄。至於其他有關不動產之公法上權利或法律關係涉訟者，為調查證據之方便，參酌民事訴訟法第十條及日本行政事件訴訟法第十二條第二項之規定，增訂第二項規定亦得由不動產所在地之行政法院管轄。
+
+* 15.1 關於公務員職務關係之訴訟，得由公務員職務所在地之行政法院管轄。
+
+> 釋：一、本條新增。二、有關公務員職務關係之訴訟，包括公務員職務關係是否發生，及因職務關係所生之訴訟，諸多國家立法例規定由原告之職務所在地之行政法院管轄，例如德國行政法院法第五十二條第四款及法國行政法院法第五十六條之規定，爰參照該等立法例，增訂本條規定。
+
+* 15.2 因公法上之保險事件涉訟者，得由為原告之被保險人、受益人之住居所地或被保險人從事職業活動所在地之行政法院管轄。前項訴訟事件於投保單位為原告時，得由其主事務所或主營業所所在地之行政法院管轄。
+
+> 釋：一、本條新增。二、公教人員保險、勞工保險、農民健康保險及全民健康保險等公法上之保險事件，具有社會安全功能，故因此種公法上保險事件涉訟者，為便利人民就近尋求行政法院之權利保護，於第一項規定得由其住居所地或被保險人從事職業所在地之行政法院管轄。三、公法上之保險事件，大部分係涉及請領保險給付及取消被保險人資格、退保、變更投保薪資（金額）、罰鍰處分等，而可能起訴者為被保險人、受益人及投保單位。爰於第二項規定投保單位為原告時，得由其主事務所或主營業所所在地之行政法院管轄。
+
+* 16 有下列各款情形之一者，最高行政法院應依當事人之聲請或受訴行政法院之請求，指定管轄：一、有管轄權之行政法院因法律或事實不能行審判權。二、因管轄區域境界不明，致不能辨別有管轄權之行政法院。三、因特別情形由有管轄權之行政法院審判，恐影響公安或難期公平。前項聲請得向受訴行政法院或最高行政法院為之。
+
+> 釋：為配合公文直式橫書格式，爰將第一項本文「左」列修正為「下」列。
 
 * 17 定行政法院之管轄以起訴時為準。
 
-* 18 民事訴訟法第三條、第六條、第十五條、第十七條、第二十條至第二十二條、第二十八條至第三十一條之規定，於本節準用之。
+* 18 民事訴訟法第三條、第六條、第十五條、第十七條、第二十條至第二十二條、第二十八條第一項、第三項、第二十九條至第三十一條之規定，於本節準用之。
 
-* 19 法官有左列情形之一者，應自行迴避，不得執行職務：一、有民事訴訟法第三十二條第一款至第六款情形之一者。二、曾在中央或地方機關參與該訴訟事件之行政處分或訴願決定者。三、曾參與該訴訟事件相牽涉之民刑事裁判者。四、曾參與該訴訟事件相牽涉之公務員懲戒事件議決者。五、曾參與該訴訟事件之前審裁判或更審前之原裁判者。六、曾參與該訴訟事件再審前之裁判者。但其迴避以一次為限。
+> 釋：民事訴訟法增訂第二十八條第二項（原第二項遞移列為第三項）防止濫用合意管轄條款，以保障經濟弱勢當事人之權益，明文限制合意管轄適用範圍，惟行政訴訟並無合意管轄制度，上開規定自無準用之餘地，爰刪除準用民事訴訟法第二十八條第二項之規定。
 
-* 20 民事訴訟法第三十三條至第三十八條之規定，除第三十六條之抗告期間外，於本節準用之。
+* 19 法官有下列情形之一者，應自行迴避，不得執行職務：一、有民事訴訟法第三十二條第一款至第六款情形之一。二、曾在中央或地方機關參與該訴訟事件之行政處分或訴願決定。三、曾參與該訴訟事件相牽涉之民刑事裁判。四、曾參與該訴訟事件相牽涉之公務員懲戒事件議決。五、曾參與該訴訟事件之前審裁判。六、曾參與該訴訟事件再審前之裁判。但其迴避以一次為限。
+
+> 釋：一、為配合公文直式橫書格式，爰將「左」列修正為「下」列。二、配合民事訴訟法第三十二條第七款有關法官自行迴避之事由，刪除本條第五款後段「或更審前之原裁判者」等文字。
+
+* 20 民事訴訟法第三十三條至第三十八條之規定，於本節準用之。
+
+> 釋：民事訴訟法第三十六條抗告期間之規定業已刪除，爰將本條文配合修正。
 
 * 21 前二條之規定於行政法院之書記官及通譯準用之。
 
@@ -60,7 +84,9 @@
 
 * 23 訴訟當事人謂原告、被告及依第四十一條與第四十二條參加訴訟之人。
 
-* 24 經訴願程序之行政訴訟，其被告為左列機關：一、駁回訴願時之原處分機關。二、撤銷或變更原處分或決定時，為最後撤銷或變更之機關。
+* 24 經訴願程序之行政訴訟，其被告為下列機關：一、駁回訴願時之原處分機關。二、撤銷或變更原處分時，為撤銷或變更之機關。
+
+> 釋：一、為配合公文直式橫書格式，爰將「左」列修正為「下」列。二、訴願法已無再訴願程序，故無被撤銷或變更之訴願決定，及「最後」撤銷或變更機關，爰修正第二款文字。
 
 * 25 人民與受委託行使公權力之團體或個人，因受託事件涉訟者，以受託之團體或個人為被告。
 
@@ -86,11 +112,15 @@
 
 * 36 民事訴訟法第四十八條、第四十九條之規定，於本節準用之。
 
-* 37 二人以上於左列各款情形，得為共同訴訟人，一同起訴或一同被訴：一、為訴訟標的之行政處分係二以上機關共同為之者。二、為訴訟標的之權利、義務或法律上利益，為其所共同者。三、為訴訟標的之權利、義務或法律上利益，於事實上或法律上有同一或同種類之原因者。依前項第三款同種類之事實上或法律上原因行共同訴訟者，以被告之住居所、公務所、機關、主事務所或主營業所所在地在同一行政法院管轄區域內者為限。
+* 37 二人以上於下列各款情形，得為共同訴訟人，一同起訴或一同被訴：一、為訴訟標的之行政處分係二以上機關共同為之者。二、為訴訟標的之權利、義務或法律上利益，為其所共同者。三、為訴訟標的之權利、義務或法律上利益，於事實上或法律上有同一或同種類之原因者。依前項第三款同種類之事實上或法律上原因行共同訴訟者，以被告之住居所、公務所、機關、主事務所或主營業所所在地在同一行政法院管轄區域內者為限。
+
+> 釋：為配合公文直式橫書格式，爰將第一項本文之「左」列修正為「下」列。
 
 * 38 共同訴訟中，一人之行為或他造對於共同訴訟人中一人之行為及關於其一人所生之事項，除別有規定外，其利害不及於他共同訴訟人。
 
-* 39 訴訟標的對於共同訴訟之各人，必須合一確定者，適用左列各款之規定：一、共同訴訟人中一人之行為有利益於共同訴訟人者，其效力及於全體；不利益者，對於全體不生效力。二、他造對於共同訴訟人中一人之行為，其效力及於全體。三、共同訴訟人中之一人，生有訴訟當然停止或裁定停止之原因者，其當然停止或裁定停止之效力及於全體。
+* 39 訴訟標的對於共同訴訟之各人，必須合一確定者，適用下列各款之規定：一、共同訴訟人中一人之行為有利益於共同訴訟人者，其效力及於全體；不利益者，對於全體不生效力。二、他造對於共同訴訟人中一人之行為，其效力及於全體。三、共同訴訟人中之一人，生有訴訟當然停止或裁定停止之原因者，其當然停止或裁定停止之效力及於全體。
+
+> 釋：為配合公文直式橫書格式，爰將「左」列修正為「下」列。
 
 * 40 共同訴訟人各有續行訴訟之權。行政法院指定期日者，應通知各共同訴訟人到場。
 
@@ -98,7 +128,9 @@
 
 * 42 行政法院認為撤銷訴訟之結果，第三人之權利或法律上利益將受損害者，得依職權命其獨立參加訴訟，並得因該第三人之聲請，裁定允許其參加。前項參加，準用第三十九條第三款之規定。參加人並得提出獨立之攻擊或防禦方法。前二項規定，於其他訴訟準用之。訴願人已向高等行政法院提起撤銷訴訟，利害關係人就同一事件再行起訴者，視為第一項之參加。
 
-* 43 第三人依前條規定聲請參加訴訟者，應向本訴訟繫屬之行政法院提出參加書狀，表明左列各款事項：一、本訴訟及當事人。二、參加人之權利或法律上利益，因撤銷訴訟之結果將受如何之損害。三、參加訴訟之陳述。行政法院認前項聲請不合前條規定者，應以裁定駁回之。關於前項裁定，得為抗告。駁回參加之裁定未確定前，參加人得為訴訟行為。
+* 43 第三人依前條規定聲請參加訴訟者，應向本訴訟繫屬之行政法院提出參加書狀，表明下列各款事項：一、本訴訟及當事人。二、參加人之權利或法律上利益，因撤銷訴訟之結果將受如何之損害。三、參加訴訟之陳述。行政法院認前項聲請不合前條規定者，應以裁定駁回之。關於前項裁定，得為抗告。駁回參加之裁定未確定前，參加人得為訴訟行為。
+
+> 釋：為配合公文直式橫書格式，爰將第一項本文之「左」列修正為「下」列。
 
 * 44 行政法院認其他行政機關有輔助一造之必要者，得命其參加訴訟。前項行政機關或有利害關係之第三人亦得聲請參加。
 
@@ -128,47 +160,65 @@
 
 * 56 民事訴訟法第七十二條、第七十五條及第七十七條之規定，於本節準用之。
 
-* 57 當事人書狀，除別有規定外，應記載左列各款事項：一、當事人姓名、性別、年齡、身分證明文件字號、職業及住所或居所；當事人為法人、機關或其他團體者，其名稱及所在地、事務所或營業所。二、有法定代理人、代表人或管理人者，其姓名、性別、年齡、身分證明文件字號、職業、住所或居所，及其與法人、機關或團體之關係。三、有訴訟代理人者，其姓名、性別、年齡、身分證明文件字號、職業、住所或居所。四、應為之聲明。五、事實上及法律上之陳述。六、供證明或釋明用之證據。七、附屬文件及其件數。八、行政法院。九、年、月、日。
+* 57 當事人書狀，除別有規定外，應記載下列各款事項：一、當事人姓名、性別、年齡、身分證明文件字號、職業及住所或居所；當事人為法人、機關或其他團體者，其名稱及所在地、事務所或營業所。二、有法定代理人、代表人或管理人者，其姓名、性別、年齡、身分證明文件字號、職業、住所或居所，及其與法人、機關或團體之關係。三、有訴訟代理人者，其姓名、性別、年齡、身分證明文件字號、職業、住所或居所。四、應為之聲明。五、事實上及法律上之陳述。六、供證明或釋明用之證據。七、附屬文件及其件數。八、行政法院。九、年、月、日。
+
+> 釋：為配合公文直式橫書格式，爰將「左」列修正為「下」列。
 
 * 58 當事人、法定代理人、代表人、管理人或訴訟代理人應於書狀內簽名或蓋章；其以指印代簽名者，應由他人代書姓名，記明其事由並簽名。
 
-* 59 民事訴訟法第一百十八條至第一百二十一條之規定，於本節準用之。
+* 59 民事訴訟法第一百十六條第三項、第一百十八條至第一百二十一條之規定，於本節準用之。
+
+> 釋：隨著科技之進步，以電信傳真或其他科技設備傳送文書，已日漸普遍，民事訴訟法第一百十六條第三項關於當事人得以電信傳真或其他科技設備將書狀傳送於法院，效力與提出書狀同之規定，應可為行政訴訟法所準用，爰增列之。
 
 * 60 於言詞辯論外，關於訴訟所為之聲明或陳述，除依本法應用書狀者外，得於行政法院書記官前以言詞為之。前項情形，行政法院書記官應作筆錄，並於筆錄內簽名。前項筆錄準用第五十七條及民事訴訟法第一百十八條至第一百二十條之規定。
 
 * 61 送達除別有規定外，由行政法院書記官依職權為之。
 
-* 62 送達由行政法院書記官交執達員或郵政機關行之。由郵政機關行送達者，以郵務人員為送達人；其實施辦法由司法院會同有關機關定之。
+* 62 送達由行政法院書記官交執達員或郵務機構行之。由郵務機構行送達者，以郵務人員為送達人；其實施辦法由司法院會同行政院定之。
+
+> 釋：一、為配合郵政總局改制為中華郵政股份有限公司，爰將「郵政機關」修正為「郵務機構」。二、原條文第二項規定之「有關機關」係指行政院，爰參酌民事訴訟法施行法第三條之規定予以明定之。
 
 * 63 行政法院得向送達地高等行政法院為送達之囑託；必要時亦得向送達地之地方法院為送達之囑託。
 
-* 64 對於無訴訟能力人為送達者，應向其法定代理人為之。對於法人、中央及地方機關或非法人之團體為送達者，應向其代表人或管理人為之。法定代理人、代表人或管理人有二人以上者，送達得僅向其中一人為之。無訴訟能力人為訴訟行為，未向行政法院陳明其法定代理人者，於補正前，行政法院得向該無訴訟能力人為送達。
+* 64 對於無訴訟能力人為送達者，應向其全體法定代理人為之。但法定代理人有二人以上，如其中有應為送達處所不明者，送達得僅向其餘之法定代理人為之。對於法人、中央及地方機關或非法人之團體為送達者，應向其代表人或管理人為之。代表人或管理人有二人以上者，送達得僅向其中一人為之。無訴訟能力人為訴訟行為，未向行政法院陳明其法定代理人者，於補正前，行政法院得向該無訴訟能力人為送達。
+
+> 釋：對於無訴訟能力人為送達者，應向其法定代理人全體為之，如有應為送達處所不明者，始得向其餘之法定代理人為之，原規定並不明確，爰參考民事訴訟法第一百二十七條之規定，修正第一項、第三項。
 
 * 65 對於在中華民國有事務所或營業所之外國法人或團體為送達者，應向其在中華民國之代表人或管理人為之。前項代表人或管理人有二人以上者，送達得僅向其中一人為之。
 
 * 66 訴訟代理人除受送達之權限受有限制者外，送達應向該代理人為之。但審判長認為必要時，得命送達於當事人本人。
 
-* 67 當事人或代理人經指定送達代收人，向受訴行政法院陳明者，應向該代收人為送達。但審判長認為必要時，得命送達於當事人本人。當事人或代理人於受訴行政法院所在地無住居所、事務所及營業所者，審判長得命其於一定期間內，指定送達代收人。如不於前項期間內指定送達代收人而陳明者，行政法院書記官得報經審判長許可，將應送達之文書，註明該當事人或代理人之住居所、事務所或營業所，交付郵政機關以掛號發送，以交付文書時視為送達之時。
+* 67 當事人或代理人經指定送達代收人，向受訴行政法院陳明者，應向該代收人為送達。但審判長認為必要時，得命送達於當事人本人。
+
+> 釋：當事人或代理人於受訴法院所在地未必有信任之人，原第二、三項規定審判長得命其於一定期間內指定送達代收人，如不於期間內指定並陳明者，法院書記官得逕將應送達之文書付郵，並以付郵時視為送達之時。如此可能使無法按期指定送達代收人之當事人，因郵件投遞作業延宕而遭受程序上重大不利益，爰參考民事訴訟法第一百三十三條之規定，將本條第二、三項刪除。
 
 * 68 送達代收人經指定陳明後，其效力及於同地之各級行政法院。但該當事人或代理人別有陳明者，不在此限。
 
 * 69 當事人或代理人於中華民國無住居所、事務所及營業所者，應指定送達代收人向受訴行政法院陳明。
 
-* 70 當事人或代理人未依前條規定指定送達代收人者，行政法院得將應送達之文書交付郵政機關以掛號發送。
+* 70 當事人或代理人未依前條規定指定送達代收人者，行政法院得將應送達之文書交付郵務機構以掛號發送。
+
+> 釋：為配合郵政總局改制為中華郵政股份有限公司，爰將「郵政機關」修正為「郵務機構」。
 
 * 71 送達，於應受送達人之住居所、事務所或營業所行之。但在他處會晤應受送達人時，得於會晤處所行之。對於法人、機關、非法人之團體之代表人或管理人為送達者，應向其事務所、營業所或機關所在地行之。但必要時亦得於會晤之處所或其住居所行之。應受送達人有就業處所者，亦得向該處所為送達。
 
 * 72 送達於住居所、事務所、營業所或機關所在地不獲會晤應受送達人者，得將文書付與有辨別事理能力之同居人、受雇人或願代為收受而居住於同一住宅之主人。前條所定送達處所之接收郵件人員，視為前項之同居人或受雇人。如同居人、受雇人、居住於同一住宅之主人或接收郵件人員為他造當事人者，不適用前二項之規定。
 
-* 73 送達不能依前二條規定為之者，得將文書寄存於送達地之自治或警察機關，並作送達通知書二份，一份黏貼於應受送達人住居所、事務所或營業所門首，一份交由鄰居轉交或置於應受送達人之信箱或其他適當之處所，以為送達。前項情形，如係以郵務人員為送達人者，得將文書寄存於附近之郵政機關。寄存之文書自寄存之日起，寄存機關應保存三個月。
+* 73 送達不能依前二條規定為之者，得將文書寄存於送達地之自治或警察機關，並作送達通知書二份，一份黏貼於應受送達人住居所、事務所或營業所門首，一份交由鄰居轉交或置於應受送達人之信箱或其他適當之處所，以為送達。前項情形，如係以郵務人員為送達人者，得將文書寄存於附近之郵務機構。寄存送達，自寄存之日起，經十日發生效力。寄存之文書自寄存之日起，寄存機關或機構應保存二個月。
+
+> 釋：一、為配合郵政總局改制為中華郵政股份有限公司，爰將「郵政機關」修正為「郵務機構」。二、行政訴訟文書寄存送達之生效日期，應無與民、刑事訴訟文書為不同處理之必要。而民事訴訟法第一百三十八條之規定於修正後增訂第三項，規定寄存送達，自寄存之日起，經十日發生效力，爰參照增訂之，並列為第三項，期臻一致。三、原第三項規定寄存之文書，寄存機關應自寄存之日起，保存三個月。惟民事訴訟法第一百三十八條第三項之保存期間規定為二個月，而刑事訴訟法第六十二條亦明定準用民事訴訟法上開規定，為避免寄存機關之困擾，爰修正本項之保存期間為二個月，並將寄存「機關」增列「或機構」。又本項關於保存期限二個月屆滿後，為避免寄存機關或機構之困擾以及實務上運作方便，以送還法院保管為宜。
 
 * 74 應受送達人拒絕收領而無法律上理由者，應將文書置於送達處所，以為送達。前項情形，如有難達留置情事者，準用前條之規定。
 
-* 75 送達，除由郵政機關行之者外，非經審判長或受命法官、受託法官或送達地高等行政法院法官或地方法院法官之許可，不得於星期日或其他休息日或日出前、日沒後為之。但應受送達人不拒絕收領者，不在此限。前項許可，行政法院書記官應於送達之文書內記明。
+* 75 送達，除由郵務機構行之者外，非經審判長或受命法官、受託法官或送達地高等行政法院法官或地方法院法官之許可，不得於星期日或其他休息日或日出前、日沒後為之。但應受送達人不拒絕收領者，不在此限。前項許可，書記官應於送達之文書內記明。
+
+> 釋：一、為配合郵政總局改制為中華郵政股份有限公司，爰將「郵政機關」修正為「郵務機構」。二、依據第一項之規定，第二項之書記官應包括高等行政法院及地方法院之書記官，爰將第二項之「行政法院書記官」，修正為「書記官」。
 
 * 76 行政法院書記官於法院內將文書付與應受送達人者，應命受送達人提出收據附卷。依第六十七條第三項之規定為送達者，行政法院書記官應作記載該事由及年、月、日、時之證書附卷。
 
-* 77 於外國或境外為送達者，應囑託該國管轄機關或駐在該國之中華民國大使、公使、領事或其他駐外人員為之。不能依前項之規定辦理者，行政法院得將應送達之文書，交付郵政機關以掛號發送。
+* 77 於外國或境外為送達者，應囑託該國管轄機關或駐在該國之中華民國使領館或其他機構、團體為之。不能依前項之規定為囑託送達者，得將應送達之文書交郵務機構以雙掛號發送，以為送達。
+
+> 釋：一、於外國或境外為送達者，以囑託該國管轄機關或駐在該國之我國使領館為之為原則。惟若我國在該外國或境外未設有使領館，囑託送達即生困難。為配合實際之需要，爰參考民事訴訟法第一百四十五條第一項之規定修正第一項。二、對於應送達之文書不能依第一項規定為囑託送達者，參考民事訴訟法第一百四十五條第二項之規定，將第二項有關送達方式之規定，修正為交付郵務機構以雙掛號發送。
 
 * 78 對於駐在外國之中華民國大使、公使、領事或其他駐外人員為送達者，應囑託外交部為之。
 
@@ -176,11 +226,15 @@
 
 * 80 對於在監所人為送達者，應囑託該監所長官為之。
 
-* 81 行政法院對於當事人之送達，如有左列情形之一者，得依聲請或依職權為公示送達：一、應為送達之處所不明者。二、於有治外法權人住居所或事務所為送達而無效者。三、於外國為送達，不能依第七十七條之規定辦理或預知雖依該條規定辦理而無效者。
+* 81 行政法院對於當事人之送達，有下列情形之一者，得依聲請或依職權為公示送達：一、應為送達之處所不明。二、於有治外法權人住居所或事務所為送達而無效。三、於外國為送達，不能依第七十七條之規定辦理或預知雖依該條規定辦理而無效。
+
+> 釋：一、為配合公文直式橫書格式，爰將「左」列修正為「下」列。二、為使文字簡明，爰將「如有」修正為「有」。
 
 * 82 公示送達，自將公告或通知書黏貼牌示處之日起，其登載公報或新聞紙者，自最後登載之日起，經二十日發生效力；於依前條第三款為公示送達者，經六十日發生效力。但對同一當事人仍為公示送達者，自黏貼牌示處之翌日起發生效力。
 
-* 83 民事訴訟法第一百二十六條、第一百三十一條、第一百三十五條、第一百四十一條、第一百四十二條、第一百四十四條、第一百四十八條、第一百五十一條及第一百五十三條之規定，於本節準用之。
+* 83 民事訴訟法第一百二十六條、第一百三十一條、第一百三十五條、第一百四十一條、第一百四十二條、第一百四十四條、第一百四十八條、第一百五十一條、第一百五十三條及第一百五十三條之一之規定，於本節準用之。
+
+> 釋：為配合現代科技發展，加速訴訟文書之傳送，以促進訴訟之進行，民事訴訟法增訂第一百五十三條之一關於訴訟文書得以電信傳真或其他科技設備傳送之規定，應可為行政訴訟法所準用，爰增列之。
 
 * 84 期日，除別有規定外，由審判長依職權定之。期日，除有不得已之情形外，不得於星期日或其他休息日定之。
 
@@ -206,9 +260,13 @@
 
 * 95 當事人書狀、筆錄、裁判書及其他關於訴訟事件之文書，行政法院應保存者，應由行政法院書記官編為卷宗。卷宗滅失事件之處理，準用民刑事訴訟卷宗滅失案件處理法之規定。
 
-* 96 當事人得向行政法院書記官請求閱覽、抄錄、影印或攝影卷內文書，或預納費用請求付與繕本、影本或節本。第三人經當事人同意或釋明有法律上之利害關係，經行政法院院長許可者，亦得為前項之請求。
+* 96 當事人得向行政法院書記官聲請閱覽、抄錄、影印或攝影卷內文書，或預納費用請求付與繕本、影本或節本。第三人經當事人同意或釋明有法律上之利害關係，而為前項之聲請者，應經行政法院裁定許可。當事人、訴訟代理人、第四十四條之參加人及其他經許可之第三人之閱卷規則，由司法院定之。
 
-* 97 裁判草案及其準備或評議文件，不得交當事人或第三人閱覽、抄錄、影印或攝影，或付與繕本、影本或節本；裁判書在宣示前，或未經法官簽名者，亦同。
+> 釋：一、當事人依本條第一項規定，向法院書記官請求閱覽、抄錄、影印或攝影卷內文書，或預納費用請求付與繕本、影本或節本等，均屬程序上之聲請，為使與訴訟上之請求有所區別，並統一用語，爰將第一項「請求」二字修正為「聲請」。二、第三人經當事人同意或釋明有法律上之利害關係，依本條第二項之規定，亦得為第一項之請求，基於同一法理，亦將第二項之「請求」修正為「聲請」。又訴訟文書應否許可第三人閱覽、抄錄、影印或攝影，審判法院最為清楚，第二項原規定經法院長官許可，未盡妥適，爰修正為「應經行政法院裁定許可」。三、為因應行政程序法之規定，增訂第三項之規定，當事人、訴訟代理人、第四十四條之參加人及其他經許可之第三人之閱卷規則，授權由司法院定之。
+
+* 97 裁判草案及其準備或評議文件，除法律別有規定外，不得交當事人或第三人閱覽、抄錄、影印或攝影，或付與繕本、影本或節本；裁判書在宣示或公告前，或未經法官簽名者，亦同。
+
+> 釋：法律如就裁判草案及其準備或評議文件之閱覽、抄錄、影印或攝影有特別規定者，例如法院組織法第一百零六條，自應依其規定。又裁判書不經宣示而僅公告者，在未經公告前，亦應有本條之適用，爰修正之。
 
 * 98 訴訟費用指裁判費及其他進行訴訟之必要費用，由敗訴之當事人負擔。但為第一百九十八條之判決時，由被告負擔。起訴，按件徵收裁判費新臺幣四千元。適用簡易訴訟程序之事件，徵收裁判費新臺幣二千元。
 
@@ -242,9 +300,9 @@
 
 > 釋：第九十八條第一項係由原條文第三項移列修正，本條第二項「第九十八條第三項」之規定，應配合修正為「第九十八條第一項」。
 
-* 100 裁判費除法律別有規定外，當事人應預納之。其未預納者，行政法院應定期命當事人繳納，逾期未納者，行政法院應駁回其訴、上訴、抗告、再審或其他聲請。進行訴訟之必要費用，行政法院得定期命當事人預納。逾期未納者，由國庫墊付，並於判決確定後，依職權裁定，向應負擔訴訟費用之人徵收之。前項裁定得為執行名義。
+* 100 裁判費除法律別有規定外，當事人應預納之。其未預納者，審判長應定期命當事人繳納；逾期未納者，行政法院應駁回其訴、上訴、抗告、再審或其他聲請。進行訴訟之必要費用，審判長得定期命當事人預納。逾期未納者，由國庫墊付，並於判決確定後，依職權裁定，向應負擔訴訟費用之人徵收之。前項裁定得為執行名義。
 
-> 釋：一、配合徵收裁判費之規定，增訂第一項明定裁判費採取預納原則，除法律別有規定外，當事人應預納之。其未預納者，行政法院應定期命當事人繳納，逾期未納者，行政法院應駁回其訴、上訴、抗告、再審或其他聲請。二、原第一項、第二項移列為第二項、第三項。
+> 釋：參考民事訴訟法第九十四條之一之規定，第一、二項關於行政法院定期命當事人繳納裁判費與進行訴訟之必要費用之規定，修正為由「審判長」為之。
 
 * 101 當事人無資力支出訴訟費用者，行政法院應依聲請，以裁定准予訴訟救助。但顯無勝訴之望者，不在此限。
 
@@ -254,27 +312,37 @@
 
 > 釋：配合第九十八條之修正，將「進行訴訟必要之費用」修正為「訴訟費用」。
 
-* 104 民事訴訟法第七十九條至第八十五條、第八十七條至第九十四條、第九十五條、第九十六條至第一百零六條、第一百零八條、第一百零九條之一、第一百十一條至第一百十三條之規定，於本節準用之。
+* 104 民事訴訟法第七十七條之二十六、第七十九條至第八十五條、第八十七條至第九十四條、第九十五條、第九十六條至第一百零六條、第一百零八條、第一百零九條之一、第一百十一條至第一百十三條、第一百十四條第一項及第一百十五條之規定，於本節準用之。
 
-> 釋：民事訴訟法修正增訂第九十四條之一，規定訴訟行為須支出費用者，經審判長定期命為預納，而不依命繳納時之法律效果，與本法第一百條第二項規定有所衝突，應不在準用之列，爰刪除準用該條之規定。
+> 釋：一、本法對溢收訴訟費用應如何處理，並無明文規定，增列準用民事訴訟法第七十七條之二十六之規定，俾便辦理。二、本法對准予訴訟救助之本案訴訟，於裁判確定後有關訴訟費用之徵收及訴訟救助之裁定，得否抗告，並無明文規定，爰修正增列準用民事訴訟法第一百十四條第一項及第一百十五條之規定，俾便辦理。
 
-* 105 起訴，應以訴狀表明左列各款事項，提出於行政法院為之：一、當事人。二、起訴之聲明。三、訴訟標的及其原因事實。訴狀內宜記載適用程序上有關事項、證據方法及其他準備言詞辯論之事項；其經訴願程序者，並附具決定書。
+* 105 起訴，應以訴狀表明下列各款事項，提出於行政法院為之：一、當事人。二、起訴之聲明。三、訴訟標的及其原因事實。訴狀內宜記載適用程序上有關事項、證據方法及其他準備言詞辯論之事項；其經訴願程序者，並附具決定書。
 
-* 106 撤銷訴訟之提起，應於訴願決定書送達後二個月之不變期間內為之。但訴願人以外之利害關係人知悉在後者，自知悉時起算。撤銷訴訟，自訴願決定書送達後，已逾三年者，不得提起。
+> 釋：為配合公文直式橫書格式，爰將第一項本文「左」列修正為「下」列。
+
+* 106 第四條及第五條訴訟之提起，應於訴願決定書送達後二個月之不變期間內為之。但訴願人以外之利害關係人知悉在後者，自知悉時起算。第四條及第五條之訴訟，自訴願決定書送達後，已逾三年者，不得提起。不經訴願程序即得提起第四條或第五條第二項之訴訟者，應於行政處分達到或公告後二個月之不變期間內為之。不經訴願程序即得提起第五條第一項之訴訟者，於應作為期間屆滿後，始得為之。但於期間屆滿後，已逾三年者，不得提起。
+
+> 釋：一、第五條請求行政機關應為行政處分或特定內容之行政處分之訴訟，本法漏未規定起訴期間，爰修正第一項增列之。二、原第二項規定移列為第三項，並增加第五條訴訟之起訴期間之限期，以利法律秩序之安定。三、在法律特別規定不經訴願程序即得提起撤銷訴訟或第五條之訴訟之情形，例如經聽證程序，作成負擔處分，或駁回人民之申請，依行政程序法第一百零九條之規定，免經訴願程序即得提起撤銷訴訟，及在人民依法申請之案件，行政機關在法定期間內應作成處分而不作為，法律規定不經訴願即得提起第五條第一項之訴訟，本法並未規定起訴期間，爰增訂第三項、第四項規定明定之。
 
 * 107 原告之訴，有下列各款情形之一者，行政法院應以裁定駁回之。但其情形可以補正者，審判長應定期間先命補正：一、訴訟事件不屬行政訴訟審判之權限者。但本法別有規定者，從其規定。二、訴訟事件不屬受訴行政法院管轄而不能請求指定管轄，亦不能為移送訴訟之裁定者。三、原告或被告無當事人能力者。四、原告或被告未由合法之法定代理人、代表人或管理人為訴訟行為者。五、由訴訟代理人起訴，而其代理權有欠缺者。六、起訴逾越法定期限者。七、當事人就已起訴之事件，於訴訟繫屬中更行起訴者。八、本案經終局判決後撤回其訴，復提起同一之訴者。九、訴訟標的為確定判決或和解之效力所及者。十、起訴不合程式或不備其他要件者。撤銷訴訟，原告於訴狀誤列被告機關者，準用第一項之規定。原告之訴，依其所訴之事實，在法律上顯無理由者，行政法院得不經言詞辯論，逕以判決駁回之。
 
 > 釋：一、為配合公文直式橫書格式，爰將第一項本文「左列」修正為「下列」。二、將第一百零七條第一項第一款作文字修正。另訴訟事件雖不屬行政訴訟審判之權限，如合於第十二條之二之要件者，行政法院應為移送，不得依本項以裁定駁回，爰增訂但書之規定。
 
-* 108 行政法院除依前條規定駁回原告之訴或移送者外，應將訴狀送達於被告。並得命被告以答辯狀陳述意見。撤銷訴訟，原處分及訴願機關經行政法院通知後，應於十日內將卷證送交行政法院。
+* 108 行政法院除依前條規定駁回原告之訴或移送者外，應將訴狀送達於被告。並得命被告以答辯狀陳述意見。原處分機關、被告機關或受理訴願機關經行政法院通知後，應於十日內將卷證送交行政法院。
+
+> 釋：本法訴訟種類已增加，應依行政法院之通知送交卷證者，已不限於撤銷訴訟，其他種類訴訟，亦應有本項之適用，「撤銷訴訟」等字，應予刪除。
 
 * 109 審判長認已適於為言詞辯論時，應速定言詞辯論期日。前項言詞辯論期日，距訴狀之送達，至少應有十日為就審期間。但有急迫情形者，不在此限。
 
 * 110 訴訟繫屬中，為訴訟標的之法律關係雖移轉於第三人，於訴訟無影響。但第三人如經兩造同意，得代當事人承當訴訟。前項情形，僅他造不同意者，移轉之當事人或第三人得聲請行政法院以裁定許第三人承當訴訟。前項裁定得為抗告。行政法院知悉訴訟標的有移轉者，應即以書面將訴訟繫屬情形通知第三人。訴願決定後，為訴訟標的之法律關係移轉於第三人者，得由受移轉人提起撤銷訴訟。
 
-* 111 訴狀送達後，原告不得將原訴變更或追加他訴。但經被告同意，或行政法院認為適當者，不在此限。被告於訴之變更或追加無異議，而為本案之言詞辯論者，視為同意變更或追加。有左列情形之一者，訴之變更或追加，應予准許：一、訴訟標的對於數人必須合一確定者，追加其原非當事人之人為當事人。二、訴訟標的之請求雖有變更，但其請求之基礎不變者。三、因情事變更而以他項聲明代最初之聲明。四、應提起確認訴訟，誤為提起撤銷訴訟者。五、依第一百九十七條或其他法律之規定，應許為訴之變更或追加者。前三項規定，於變更或追加之新訴為撤銷訴訟而未經訴願程序者不適用之。對於行政法院以訴為非變更追加，或許訴之變更追加之裁判，不得聲明不服。但撤銷訴訟，主張其未經訴願程序者，得隨同終局判決聲明不服。
+* 111 訴狀送達後，原告不得將原訴變更或追加他訴。但經被告同意或行政法院認為適當者，不在此限。被告於訴之變更或追加無異議，而為本案之言詞辯論者，視為同意變更或追加。有下列情形之一者，訴之變更或追加，應予准許：一、訴訟標的對於數人必須合一確定，追加其原非當事人之人為當事人。二、訴訟標的之請求雖有變更，但其請求之基礎不變。三、因情事變更而以他項聲明代最初之聲明。四、應提起確認訴訟，誤為提起撤銷訴訟。五、依第一百九十七條或其他法律之規定，應許為訴之變更或追加。前三項規定，於變更或追加之新訴為撤銷訴訟而未經訴願程序者不適用之。對於行政法院以訴為非變更追加，或許訴之變更追加之裁判，不得聲明不服。但撤銷訴訟，主張其未經訴願程序者，得隨同終局判決聲明不服。
 
-* 112 被告於言詞辯論終結前，得在本訴繫屬之行政法院提起反訴。但反訴為撤銷訴訟者，不得提起。原告對於反訴，不得復行提起反訴。反訴之請求如專屬他行政法院管轄，或與本訴之請求或其防禦方法不相牽連者，不得提起。被告意圖延滯訴訟而提起反訴者，行政法院得駁回之。
+> 釋：為配合公文直式橫書格式，爰將第三項本文「左」列修正為「下」列。
+
+* 112 被告於言詞辯論終結前，得在本訴繫屬之行政法院提起反訴。但對於撤銷訴訟及課予義務訴訟，不得提起反訴。原告對於反訴，不得復行提起反訴。反訴之請求如專屬他行政法院管轄，或與本訴之請求或其防禦方法不相牽連者，不得提起。被告意圖延滯訴訟而提起反訴者，行政法院得駁回之。
+
+> 釋：原第一項但書規定之文字易滋疑義，並遺漏課予義務訴訟，爰修正之。
 
 * 113 原告於判決確定前得撤回訴之全部或一部。但被告已為本案之言詞辯論者，應得其同意。訴之撤回，應以書狀為之。但在期日得以言詞為之。於期日所為之撤回，應記載於筆錄，如他造不在場，應將筆錄送達。訴之撤回，他造於收受撤回書狀或筆錄之送達後十日內未提出異議者，視為同意撤回。他造於期日到場，自訴之撤回之日起，十日內未提出異議者，亦同。
 
@@ -292,7 +360,9 @@
 
 * 120 原告準備言詞辯論之書狀，依第一百零五條之規定。被告因準備言詞辯論，宜於未逾就審期間二分之一以前，提出答辯狀。
 
-* 121 行政法院因使辯論易於終結，認為必要時，得於言詞辯論前，為左列各款之處置：一、命當事人、法定代理人、代表人或管理人本人到場。二、命當事人提出圖案、表冊、外國文文書之譯本或其他文書、物件。三、行勘驗、鑑定或囑託機關、團體為調查。四、通知證人或鑑定人，及調取或命第三人提出文書、物件。五、使受命法官或受託法官調查證據。行政法院因闡明或確定訴訟關係，於言詞辯論時，得為前項第一款至第三款之處置，並得將當事人或第三人提出之文書、物件暫留置之。
+* 121 行政法院因使辯論易於終結，認為必要時，得於言詞辯論前，為下列各款之處置：一、命當事人、法定代理人、代表人或管理人本人到場。二、命當事人提出圖案、表冊、外國文文書之譯本或其他文書、物件。三、行勘驗、鑑定或囑託機關、團體為調查。四、通知證人或鑑定人，及調取或命第三人提出文書、物件。五、使受命法官或受託法官調查證據。行政法院因闡明或確定訴訟關係，於言詞辯論時，得為前項第一款至第三款之處置，並得將當事人或第三人提出之文書、物件暫留置之。
+
+> 釋：為配合公文直式橫書格式，爰將第一項本文「左」列修正為「下」列。
 
 * 122 言詞辯論，以當事人聲明起訴之事項為始。當事人應就訴訟關係為事實上及法律上之陳述。當事人不得引用文件以代言詞陳述。但以舉文件之辭句為必要時，得朗讀其必要之部分。
 
@@ -306,15 +376,23 @@
 
 * 127 分別提起之數宗訴訟係基於同一或同種類之事實上或法律上之原因者，行政法院得命合併辯論。命合併辯論之數宗訴訟，得合併裁判之。
 
-* 128 行政法院書記官應作言詞辯論筆錄，記載左列各款事項：一、辯論之處所及年、月、日。二、法官、書記官及通譯姓名。三、訴訟事件。四、到場當事人、法定代理人、代表人、管理人、訴訟代理人、輔佐人及其他經通知到場之人姓名。五、辯論之公開或不公開；如不公開者，其理由。
+* 128 行政法院書記官應作言詞辯論筆錄，記載下列各款事項：一、辯論之處所及年、月、日。二、法官、書記官及通譯姓名。三、訴訟事件。四、到場當事人、法定代理人、代表人、管理人、訴訟代理人、輔佐人及其他經通知到場之人姓名。五、辯論之公開或不公開；如不公開者，其理由。
 
-* 129 言詞辯論筆錄內，應記載辯論進行之要領，並將左列各款事項記載明確：一、訴訟標的之捨棄、認諾、自認及訴之撤回。二、證據之聲明或撤回，及對於違背訴訟程序規定之異議。三、當事人所為其他重要聲明或陳述，及經告知而不為聲明或陳述之情形。四、依本法規定應記載筆錄之其他聲明或陳述。五、證人或鑑定人之陳述，及勘驗所得之結果。六、審判長命令記載之事項。七、不作裁判書附卷之裁判。八、裁判之宣示。
+> 釋：為配合公文直式橫書格式，爰將「左」列修正為「下」列。
+
+* 129 言詞辯論筆錄內，應記載辯論進行之要領，並將下列各款事項記載明確：一、訴訟標的之捨棄、認諾、自認及訴之撤回。二、證據之聲明或撤回，及對於違背訴訟程序規定之異議。三、當事人所為其他重要聲明或陳述，及經告知而不為聲明或陳述之情形。四、依本法規定應記載筆錄之其他聲明或陳述。五、證人或鑑定人之陳述，及勘驗所得之結果。六、審判長命令記載之事項。七、不作裁判書附卷之裁判。八、裁判之宣示。
+
+> 釋：為配合公文直式橫書格式，爰將「左」列修正為「下」列。
 
 * 130 筆錄或筆錄內所引用附卷或作為附件之文書內所記前條第一款至第六款事項，應依聲請於法庭向關係人朗讀或令其閱覽，並於筆錄內附記其事由。關係人對於筆錄所記有異議者，行政法院書記官得更正或補充之。如以異議為不當，應於筆錄內附記其異議。以機器記錄言詞辯論之進行者，其實施辦法由司法院定之。
 
-* 131 第一百二十一條第二項、第一百二十四條及民事訴訟法第二百條、第二百零七條、第二百零八條、第二百十三條第二項、第二百十四條、第二百十七條、第二百六十八條關於法院或審判長權限之規定，於受命法官行準備程序時準用之。
+* 131 第四十九條第三項至第六項、第五十五條、第六十六條但書、第六十七條但書、第一百條第一項前段、第二項、第一百零七條第一項但書、第一百十條第四項、第一百二十一條第一項第一款至第四款、第二項、第一百二十四條、第一百二十五條及民事訴訟法第四十九條、第七十五條第一項、第一百二十條第一項、第一百二十一條第一項、第二項、第二百條、第二百零七條、第二百零八條、第二百十三條第二項、第二百十三條之一、第二百十四條、第二百十七條、第二百六十八條、第二百六十八條之一第二項、第三項、第二百六十八條之二第一項、第三百七十一條第一項、第二項及第三百七十二條關於法院或審判長權限之規定，於受命法官行準備程序時準用之。
 
-* 132 民事訴訟法第一百九十五條至第一百九十七條、第二百條、第二百零一條、第二百零四條、第二百零六條至第二百零八條、第二百十條、第二百十一條、第二百十四條、第二百十五條、第二百十七條至第二百十九條、第二百六十五條、第二百六十七條、第二百六十八條、第二百七十條、第二百七十一條、第二百七十三條至第二百七十六條之規定，於本節準用之。
+> 釋：一、受命法官就有關命補正能力、法定代理權、訴訟代理權、訴訟所必要之允許或其他訴訟要件之欠缺（第二十八條、第三十六條規定準用民事訴訟法第四十九條、第五十六條規定準用民事訴訟法第七十五條第一項及本法第一百零七條第一項但書）、命當事人預納裁判費訴訟行為須支出之費用（第一百條第一項前段、第二項）、命當事人提出附屬文件之原本（第五十九條規定準用民事訴訟法第一百二十條第一項）、命補正書狀之欠缺（第五十九條規定準用民事訴訟法第一百二十一條第一項、第二項）、於知悉訴訟標的有移轉時，以書面將訴訟繫屬之事實通知第三人（第一百十條第四項）。准否保全證據之裁定（第一百七十六條規定準用民事訴訟法第三百七十一條第一項、第二項、第三百七十二條）等程序上較為細瑣之問題，如由受命法官先行處理，將有助於訴訟程序之迅速進行，而達到審理集中化之目標。又關於是否准許委任非律師為訴訟代理人（第四十九條第三項至第六項）、是否准許當事人或訴訟代理人於期日協同輔佐人到場（第五十五條）、命送達於當事人本人（第六十六條但書、第六十七條但書）、法院於言詞辯論前得為之處置（第一百二十一條第一項第一款至第四款）及依職權調查事實關係與向當事人發問或告知（第一百二十五條）等規定，於受命法官行準備程序時，亦應準用，爰增列於本條，與原規定併列。二、依第一百三十二條準用民事訴訟法第二百七十條之一第一項第三款規定，受命法官為闡明訴訟關係，得進行整理並協議簡化爭點，基於此項權限，受命法官於必要時，本即得定期間命當事人就整理爭點之結果提出摘要書狀，於當事人未依規定提出書狀或聲明證據時，亦得依聲請或依職權命該當事人以書狀說明其理由。為求明確，爰於本條增訂民事訴訟法第二百六十八條之一第二項、第三項及第二百六十八條之二第一項關於法院或審判長權限之規定，於受命法官行準備程序時準用之。
+
+* 132 民事訴訟法第一百九十五條至第一百九十七條、第二百條、第二百零一條、第二百零四條、第二百零六條至第二百零八條、第二百十條、第二百十一條、第二百十四條、第二百十五條、第二百十七條至第二百十九條、第二百六十五條至第二百六十八條之一、第二百六十八條之二、第二百七十條至第二百七十一條之一、第二百七十三條至第二百七十六條之規定，於本節準用之。
+
+> 釋：配合民事訴訟法之修正，增列準用之規定。
 
 * 133 行政法院於撤銷訴訟，應依職權調查證據；於其他訴訟，為維護公益者，亦同。
 
@@ -332,7 +410,9 @@
 
 * 140 受訴行政法院於言詞辯論前調查證據，或由受命法官、受託法官調查證據者，行政法院書記官應作調查證據筆錄。第一百二十八條至第一百三十條之規定，於前項筆錄準用之。受託法官調查證據筆錄，應送送受訴行政法院。
 
-* 141 調查證據之結果，應告知當事人為辯論。於受訴行政法院外調查證據者，當事人應於言詞辯論時陳述其調查之結果。但審判長得令庭員或行政法院書記官朗讀調查證據筆錄代之。
+* 141 調查證據之結果，應告知當事人為辯論。於受訴行政法院外調查證據者，當事人應於言詞辯論時陳述其調查之結果。但審判長得令行政法院書記官朗讀調查證據筆錄代之。
+
+> 釋：第二項參酌民事訴訟法第二百九十七條第二項規定，刪除「庭員或」之文字，以統一訴訟法法典體例。
 
 * 142 除法律別有規定外，不問何人，於他人之行政訴訟有為證人之義務。
 
@@ -340,19 +420,27 @@
 
 * 144 以公務員、中央民意代表或曾為公務員、中央民意代表之人為證人，而就其職務上應守秘密之事項訊問者，應得該監督長官或民意機關之同意。前項同意，除有妨害國家高度機密者外，不得拒絕。以受公務機關委託承辦公務之人為證人者，準用前二項之規定。
 
-* 145 證人恐因陳述致自己或左列之人受刑事訴追或蒙恥辱者，得拒絕證言：一、證人之配偶、前配偶或四親等內之血親、三親等內之姻親或曾有此親屬關係或與證人訂有婚約者。二、證人之監護人或受監護人。
+* 145 證人恐因陳述致自己或下列之人受刑事訴追或蒙恥辱者，得拒絕證言：一、證人之配偶、前配偶或四親等內之血親、三親等內之姻親或曾有此親屬關係或與證人訂有婚約者。二、證人之監護人或受監護人。
 
-* 146 證人有左列各款情形之一者，得拒絕證言：一、證人有第一百四十四條之情形者。二、證人為醫師、藥師、藥商、助產士、宗教師、律師、會計師或其他從事相類業務之人或其業務上佐理人或曾任此等職務之人，就其因業務所知悉有關他人秘密之事項受訊問者。三、關於技術上或職業上之秘密受訊問者。前項規定，於證人秘密之責任已經免除者，不適用之。
+> 釋：為配合公文直式橫書格式，爰將「左」列修正為「下」列。
+
+* 146 證人有下列各款情形之一者，得拒絕證言：一、證人有第一百四十四條之情形。二、證人為醫師、藥師、藥商、助產士、宗教師、律師、會計師或其他從事相類業務之人或其業務上佐理人或曾任此等職務之人，就其因業務所知悉有關他人秘密之事項受訊問。三、關於技術上或職業上之秘密受訊問。前項規定，於證人秘密之責任已經免除者，不適用之。
+
+> 釋：為配合公文直式橫書格式，爰將第一項本文「左」列修正為「下」列。
 
 * 147 依前二條規定，得拒絕證言者，審判長應於訊問前或知有該項情形時告知之。
 
 * 148 證人不陳明拒絕之原因事實而拒絕證言，或以拒絕為不當之裁定已確定而仍拒絕證言者，行政法院得以裁定處新臺幣三千元以下罰鍰。前項裁定得為抗告，抗告中應停止執行。
 
-* 149 審判長於訊問前，應命證人各別具結。但其應否具結有疑義者，於訊問後行之。審判長於證人具結前，應告以具結之義務及偽證之處罰。
+* 149 審判長於訊問前，應命證人各別具結。但其應否具結有疑義者，於訊問後行之。審判長於證人具結前，應告以具結之義務及偽證之處罰。證人以書狀為陳述者，不適用前二項之規定。
+
+> 釋：第一百七十六條明文準用民事訴訟法第三百零五條證人書狀陳述之制度，且民事訴訟法第三百零五條第六項就證人具結之方式，已有特別規定，而本條關於證人之具結，係適用於直接審理及言詞審理證人之訊問之情形，對於證人以書狀陳述之情形，則不能適用，爰參照民事訴訟法第三百十二條第三項之規定，增訂第三項。
 
 * 150 以未滿十六歲或因精神障礙不解具結意義及其效果之人為證人者，不得令其具結。
 
-* 151 以左列各款之人為證人者，得不令其具結：一、證人為當事人之配偶、前配偶或四親等內之血親、三親等內之姻親或曾有此親屬關係或與當事人訂有婚約者。二、有第一百四十五條情形而不拒絕證言者。三、當事人之受雇人或同居人。
+* 151 以下列各款之人為證人者，得不令其具結：一、證人為當事人之配偶、前配偶或四親等內之血親、三親等內之姻親或曾有此親屬關係或與當事人訂有婚約。二、有第一百四十五條情形而不拒絕證言。三、當事人之受雇人或同居人。
+
+> 釋：為配合公文直式橫書格式，爰將「左」列修正為「下」列。
 
 * 152 證人就與自己或第一百四十五條所列之人有直接利害關係之事項受訊問者，得拒絕具結。
 
@@ -376,13 +464,17 @@
 
 * 162 行政法院認有必要時，得就訴訟事件之專業法律問題徵詢從事該學術研究之人，以書面或於審判期日到場陳述其法律上意見。前項意見，於裁判前應告知當事人使為辯論。第一項陳述意見之人，準用鑑定人之規定。但不得令其具結。
 
-* 163 左列各款文書，當事人有提出之義務：一、該當事人於訴訟程序中曾經引用者。二、他造依法律規定，得請求交付或閱覽者。三、為他造之利益而作者。四、就與本件訴訟關係有關之事項所作者。五、商業帳簿。
+* 163 下列各款文書，當事人有提出之義務：一、該當事人於訴訟程序中曾經引用者。二、他造依法律規定，得請求交付或閱覽者。三、為他造之利益而作者。四、就與本件訴訟關係有關之事項所作者。五、商業帳簿。
+
+> 釋：為配合公文直式橫書格式，爰將「左」列修正為「下」列。
 
 * 164 公務員或機關掌管之文書，行政法院得調取之。如該機關為當事人時，並有提出之義務。前項情形，除有妨害國家高度機密者外，不得拒絕。
 
 * 165 當事人無正當理由不從提出文書之命者，行政法院得審酌情形認他造關於該文書之主張或依該文書應證之事實為真實。前項情形，於裁判前應令當事人有辯論之機會。
 
-* 166 聲明書證係使用第三人所執之文書者，應聲請行政法院命第三人提出或定由舉證人提出之期間。民事訴訟法第三百四十二條第二項之規定，於前項聲請準用之。文書為第三人所執之事由第三人有提出義務之原因，應釋明之。
+* 166 聲明書證係使用第三人所執之文書者，應聲請行政法院命第三人提出或定由舉證人提出之期間。民事訴訟法第三百四十二條第二項、第三項之規定，於前項聲請準用之。文書為第三人所執之事由及第三人有提出義務之原因，應釋明之。
+
+> 釋：當事人依第二項準用民事訴訟法第三百四十二條第二項之規定，聲請行政法院命執有文書之第三人提出文書時，如一律令其表明應命提出之文書及其內容，有時確有明顯之困難，法院於衡量實際情形，認為適當者，得命他造為必要之協助。民事訴訟法第三百四十二條第三項之規定，應可準用於行政訴訟，爰增訂之。
 
 * 167 行政法院認應證之事實重要且舉證人之聲請正當者，應以裁定命第三人提出文書或定由舉證人提出文書之期間。行政法院為前項裁定前，應使該第三人有陳述意見之機會。
 
@@ -402,7 +494,9 @@
 
 * 175 保全證據之聲請，在起訴後，向受訴行政法院為之；在起訴前，向受訊問人住居地或證物所在地之高等行政法院為之。遇有急迫情形時，於起訴後，亦得向前項高等行政法院聲請保全證據。
 
-* 176 民事訴訟法第二百十五條、第二百十七條至第二百十九條、第二百七十八條、第二百八十一條、第二百八十二條、第二百八十四條至第二百八十六條、第二百九十一條至第二百九十三條、第二百九十五條、第二百九十六條、第二百九十八條至第三百零一條、第三百零四條、第三百零五條、第三百零九條、第三百十條、第三百十三條、第三百十六條至第三百十九條、第三百二十一條、第三百二十二條、第三百二十五條至第三百二十七條、第三百三十一條至第三百三十七條、第三百三十九條、第三百四十一條至第三百四十三條、第三百五十二條至第三百五十八條、第三百六十一條、第三百六十四條至第三百六十六條、第三百六十八條、第三百七十條至第三百七十六條之規定，除第三百三十三條之抗告期間外，於本節準用之。
+* 176 民事訴訟法第二百十五條、第二百十七條至第二百十九條、第二百七十八條、第二百八十一條、第二百八十二條、第二百八十二條之一、第二百八十四條至第二百八十六條、第二百九十一條至第二百九十三條、第二百九十五條、第二百九十六條、第二百九十六條之一、第二百九十八條至第三百零一條、第三百零四條、第三百零五條、第三百零九條、第三百十條、第三百十三條、第三百十三條之一、第三百十六條至第三百十九條、第三百二十一條、第三百二十二條、第三百二十五條至第三百二十七條、第三百三十一條至第三百三十七條、第三百三十九條、第三百四十一條至第三百四十三條、第三百五十二條至第三百五十八條、第三百六十一條、第三百六十四條至第三百六十六條、第三百六十八條、第三百七十條至第三百七十六條之二之規定，於本節準用之。
+
+> 釋：一、增列民事訴訟法之規定於本節準用：(一)民事訴訟法第二百八十二條之一及第二百九十六條之一之規定，關於為防杜當事人以不正當手段妨礙他造之舉證活動，及為保障當事人之程序權，防止發生突襲性裁判之規定，依其性質可準用於行政訴訟。(二)本條準用民事訴訟法第三百零五條證人得以書狀陳述之規定，則民事訴訟法第三百十三條之一之規定，應準用於行政訴訟。(三)民事訴訟法第三百五十七條之一，當事人或代理人就真正之文書，故意為爭執之處罰規定，本法應可採用。(四)民事訴訟法第三百七十五條之一，係就已於保全證據程序訊問之證人，於言詞辯論程序中聲請再為訊問，法院應為訊問之規定。第三百七十六條之一，係就當事人於起訴前聲請保全證據者，得利用法院所調查之證據及所蒐集之事證資料，此時如能就訴訟標的、事實、證據或其他事項達成協議，當事人間之紛爭可能因此而獲得解決或避免擴大，自有必要將其協議記明筆錄，以節省法院及當事人進行訴訟所需之勞費，達到訴訟經濟之目的。又為貫徹當事人依其承諾而自動履行給付內容之意思，並達到疏減訟源之目的，當事人依其於保全證據程序中就訴訟標的或併就訴訟標的外之事項達成之協議，而應為一定之給付者，賦予該協議執行力之規定。第三百七十六條之二，係就於保全證據程序終結後，如當事人之紛爭久懸不決，則保全證據所為文書、物件之留置或其他處置，將無法獲得適當之處理，而致聲請保全證據之當事人或利害關係人遭受損害，為保障其權益，法院得因利害關係人之聲請而裁定解除該保全證據所為處置之規定，上開條文，依其性質得準用於行政訴訟。二、本條原排除民事訴訟法第三百三十三條抗告期間之準用，惟民事訴訟法業已刪除該條關於抗告期間之規定，本法自毋庸再為排除適用之規定，爰將本條最後一句「除第三百三十三條之抗告期間外」刪除。
 
 * 177 行政訴訟之裁判須以民事法律關係是否成立為準據，而該法律關係已經訴訟繫屬尚未終結者，行政法院應以裁定停止訴訟程序。除前項情形外，有民事、刑事或其他行政爭訟牽涉行政訴訟之裁判者，行政法院在該民事、刑事或其他行政爭訟終結前，得以裁定停止訴訟程序。
 
@@ -428,7 +522,9 @@
 
 * 188 行政訴訟除別有規定外，應本於言詞辯論而為裁判。法官非參與裁判基礎之辯論者，不得參與裁判。裁定得不經言詞辯論為之。裁定前不行言詞辯論者，除別有規定外，得命關係人以書狀或言詞為陳述。
 
-* 189 行政法院為裁判時，應斟酌全辯論意旨及調查證據之結果，依論理及經驗法則判斷事實之真偽。但別有規定者，不在此限。依前項判斷而得心證之理由，應記明於判決。
+* 189 行政法院為裁判時，應斟酌全辯論意旨及調查證據之結果，依論理及經驗法則判斷事實之真偽。但別有規定者，不在此限。當事人已證明受有損害而不能證明其數額或證明顯有重大困難者，法院應審酌一切情況，依所得心證定其數額。得心證之理由，應記明於判決。
+
+> 釋：損害賠償訴訟，原告已證明受有損害，而有客觀上不能證明其數額或證明顯有重大困難之情事時，如仍強令原告舉證證明損害數額，非惟過苛，亦不符訴訟經濟之原則，爰參照民事訴訟法第二百二十二條第二項之規定，增訂第二項。原第二項規定並作文字修正，移為第三項。
 
 * 190 行政訴訟達於可為裁判之程度者，行政法院應為終局判決。
 
@@ -442,7 +538,9 @@
 
 * 195 行政法院認原告之訴為有理由者，除別有規定外，應為其勝訴之判決；認為無理由者，應以判決駁回之。撤銷訴訟之判決，如係變更原處分或決定者，不得為較原處分或決定不利於原告之判決。
 
-* 196 行政處分已執行完畢，行政法院為撤銷行政處分判決時，經原告聲請，並認為適當者，得於判決中命行政機關為回復原狀之必要處置。
+* 196 行政處分已執行者，行政法院為撤銷行政處分判決時，經原告聲請，並認為適當者，得於判決中命行政機關為回復原狀之必要處置。撤銷訴訟進行中，原處分已執行而無回復原狀可能或已消滅者，於原告有即受確認判決之法律上利益時，行政法院得依聲請，確認該行政處分為違法。
+
+> 釋：一、釐清條文用語，將第一項之「行政處分已執行完畢」，修正為「行政處分已執行者」。二、行政處分已執行與行政處分消滅不同，如有回復原狀之可能，依第一項意旨，應可提起撤銷訴訟。而如於合法提起之撤銷訴訟進行中，原處分經撤銷或因其他事由消滅，或已執行且無法回復原狀者，即無從撤銷。惟如原告對於原行政處分為違法復有即受確認判決之法律上利益時，自應許其得有救濟之機會，爰增訂第二項。
 
 * 197 撤銷訴訟，其訴訟標的之行政處分涉及金錢或其他代替物之給付或確認者，行政法院得以確定不同金額之給付或以不同之確認代替之。
 
@@ -450,7 +548,9 @@
 
 * 199 行政法院為前條判決時，應依原告之聲明，將其因違法處分或決定所受之損害於判決內命被告機關賠償。原告未為前項聲明者，得於前條判決確定後一年內，向高等行政法院訴請賠償。
 
-* 200 行政法院對於人民依第五條規定請求應為行政處分或應為特定內容之行政處分之訴訟，應為左列方式之裁判：一、原告之訴不合法者，應以裁定駁回之。二、原告之訴無理由者，應以判決駁回之。三、原告之訴有理由，且案件事證明確者，應判命行政機關作成原告所申請內容之行政處分。四、原告之訴雖有理由，惟案件事證尚未臻明確或涉及行政機關之行政裁量決定者，應判命行政機關遵照其判決之法律見解對於原告作成決定。
+* 200 行政法院對於人民依第五條規定請求應為行政處分或應為特定內容之行政處分之訴訟，應為下列方式之裁判：一、原告之訴不合法者，應以裁定駁回之。二、原告之訴無理由者，應以判決駁回之。三、原告之訴有理由，且案件事證明確者，應判命行政機關作成原告所申請內容之行政處分。四、原告之訴雖有理由，惟案件事證尚未臻明確或涉及行政機關之行政裁量決定者，應判命行政機關遵照其判決之法律見解對於原告作成決定。
+
+> 釋：為配合公文直式橫書格式，爰將「左」列修正為「下」列。
 
 * 201 行政機關依裁量權所為之行政處分，以其作為或不作為逾越權限或濫用權力者為限，行政法院得予撤銷。
 
@@ -458,7 +558,9 @@
 
 * 203 公法上契約成立後，情事變更，非當時所得預料，而依其原有效果顯失公平者，行政法院得依當事人聲請，為增、減給付或變更、消滅其他原有效果之判決。為當事人之行政機關，因防止或免除公益上顯然重大之損害亦得為前項之聲請。前二項規定，於因公法上其他原因發生之財產上給付，準用之。
 
-* 204 經言詞辯論之判決，應宣示之；不經言詞辯論之判決，應公告之。宣示判決應於辯論終結之期日或辯論終結時指定之期日為之。前項指定之宣示期日，自辯論終結時起，不得逾七日。判決經公告者，行政法院書記官應作記載該事由及年、月、日、時之證書附卷。
+* 204 經言詞辯論之判決，應宣示之；不經言詞辯論之判決，應公告之。宣示判決應於辯論終結之期日或辯論終結時指定之期日為之。前項指定之宣示期日，自辯論終結時起，不得逾十日。判決經公告者，行政法院書記官應作記載該事由及年、月、日、時之證書附卷。
+
+> 釋：本條第三項原規定，指定之宣示期日，自辯論終結時起，不得逾七日，期間過短，爰參照民事訴訟法第二百二十三條第三項之規定，將七日修正為十日。
 
 * 205 宣示判決，不問當事人是否在場，均有效力。判決經宣示後，其主文仍應於當日在行政法院牌示處公告之。判決經宣示或公告後，當事人得不待送達，本於該判決為訴訟行為。
 
@@ -468,7 +570,9 @@
 
 * 208 裁定經宣示後，為該裁定之行政法院、審判長、受命法官或受託法官受其羈束；不宣示者，經公告或送達後受其羈束。但關於指揮訴訟或別有規定者，不在此限。
 
-* 209 判決應作判決書記載左列各款事項：一、當事人姓名、性別、年齡、身分證明文件字號、住所或居所；當事人為法人、機關或其他團體者，其名稱及所在地、事務所或營業所。二、有法定代理人、代表人、管理人者，其姓名、住所或居所及其與法人、機關或團體之關係。三、有訴訟代理人者，其姓名、住所或居所。四、判決經言詞辯論者，其言詞辯論終結日期。五、主文。六、事實。七、理由。八、年、月、日。九、行政法院。事實項下，應記載言詞辯論時當事人之聲明及所提攻擊或防禦方法之要領。必要時，得以書狀、筆錄或其他文書作為附件。理由項下，應記載關於攻擊或防禦方法之意見及法律上之意見。
+* 209 判決應作判決書記載下列各款事項：一、當事人姓名、性別、年齡、身分證明文件字號、住所或居所；當事人為法人、機關或其他團體者，其名稱及所在地、事務所或營業所。二、有法定代理人、代表人、管理人者，其姓名、住所或居所及其與法人、機關或團體之關係。三、有訴訟代理人者，其姓名、住所或居所。四、判決經言詞辯論者，其言詞辯論終結日期。五、主文。六、事實。七、理由。八、年、月、日。九、行政法院。事實項下，應記載言詞辯論時當事人之聲明及所提攻擊或防禦方法之要領；必要時，得以書狀、筆錄或其他文書作為附件。理由項下，應記載關於攻擊或防禦方法之意見及法律上之意見。
+
+> 釋：為配合公文直式橫書格式，爰將第一項本文「左」列修正為「下」列。
 
 * 210 判決，應以正本送達於當事人。前項送達，自行政法院書記官收領判決原本時起，至遲不得逾十日。對於判決得為上訴者，應於送達當事人之正本內告知其期間及提出上訴狀之行政法院。前項告知期間有錯誤時，告知期間較法定期間為短者，以法定期間為準；告知期間較法定期間為長者，應由行政法院書記官於判決正本送達後二十日內，以通知更正之，並自更正通知送達之日起計算法定期間。行政法院未依第三項規定為告知，或告知錯誤未依前項規定更正，致當事人遲誤上訴期間者，視為不應歸責於己之事由，得自判決送達之日起一年內，適用第九十一條之規定，聲請回復原狀。
 
@@ -508,9 +612,13 @@
 
 * 228 第二百二十四條至第二百二十六條之規定，於前條第二項情形準用之。
 
-* 229 左列各款行政訴訟事件，適用本章所定之簡易程序：一、關於稅捐課徵事件涉訟，所核課之稅額在新臺幣三萬元以下者。二、因不服行政機關所為新臺幣三萬元以下罰鍰處分而涉訟者。三、其他關於公法上財產關係之訴訟，其標的之金額或價額在新臺幣三萬元以下者。四、因不服行政機關所為告誡、警告、記點、記次或其他相類之輕微處分而涉訟者。五、依法律之規定應適用簡易訴訟程序者。前項所定數額，司法院得因情勢需要，以命令減為新臺幣二萬元或增至新臺幣二十萬元。
+* 229 下列各款行政訴訟事件，適用本章所定之簡易程序：一、關於稅捐課徵事件涉訟，所核課之稅額在新臺幣四十萬元以下者。二、因不服行政機關所為新臺幣四十萬元以下罰鍰處分而涉訟者。三、其他關於公法上財產關係之訴訟，其標的之金額或價額在新臺幣四十萬元以下者。四、因不服行政機關所為告誡、警告、記點、記次或其他相類之輕微處分而涉訟者。五、依法律之規定應適用簡易訴訟程序者。前項所定數額，司法院得因情勢需要，以命令減為新臺幣二十萬元或增至新臺幣六十萬元。
 
-* 230 前條第一項第一款至第三款之訴，因訴之變更，致訴訟標的之金額或價額逾新臺幣三萬元者，其辯論及裁判不得依簡易程序之規定；追加之新訴或反訴，其訴訟標的之金額或價額逾新臺幣三萬元，而以原訴與之合併辯論及裁判者，亦同。
+> 釋：一、為配合公文直式橫書格式，爰將第一項本文「左」列修正為「下」列。二、本條原定適用簡易程序之金額或價額，依當今之國民生活水準已屬過低，為因應社會經濟發展，並參酌民事訴訟法第四百二十七條之規定，爰將第一項第一款至第三款之金額或價額修正為新臺幣四十萬元以下。第二項之數額修正為新臺幣二十萬元及六十萬元。
+
+* 230 前條第一項第一款至第三款之訴，因訴之變更，致訴訟標的之金額或價額逾新臺幣四十萬元者，其辯論及裁判不得依簡易程序之規定；追加之新訴或反訴，其訴訟標的之金額或價額逾新臺幣四十萬元，而以原訴與之合併辯論及裁判者，亦同。
+
+> 釋：本條原定適用簡易程序之金額或價額，依當今之國民生活水準已屬過低，為因應社會經濟發展，並參酌民事訴訟法第四百二十七條之規定，爰將金額或價額修正為新臺幣四十萬元以下。
 
 * 231 起訴及其他期日外之聲明或陳述，概得以言詞為之。以言詞起訴者，應將筆錄送達於他造。
 
@@ -536,9 +644,13 @@
 
 * 242 對於高等行政法院判決之上訴，非以其違背法令為理由，不得為之。
 
-* 243 判決不適用法規或適用不當者，為違背法令。有左列各款情形之一者，其判決當然違背法令：一、判決法院之組織不合法者。二、依法律或裁判應迴避之法官參與裁判者。三、行政法院於權限之有無辨別不當或違背專屬管轄之規定者。四、當事人於訴訟未經合法代理或代表者。五、違背言詞辯論公開之規定者。六、判決不備理由或理由矛盾者。
+* 243 判決不適用法規或適用不當者，為違背法令。有下列各款情形之一者，其判決當然違背法令：一、判決法院之組織不合法。二、依法律或裁判應迴避之法官參與裁判。三、行政法院於權限之有無辨別不當或違背專屬管轄之規定。四、當事人於訴訟未經合法代理或代表。五、違背言詞辯論公開之規定。六、判決不備理由或理由矛盾。
 
-* 244 提起上訴，應以上訴狀表明左列各款事項，提出於原高等行政法院為之：一、當事人。二、高等行政法院判決，及對於該判決上訴之陳述。三、對於高等行政法院判決不服之程度，及應如何廢棄或變更之聲明。四、上訴理由。前項上訴狀內並應添具關於上訴理由之必要證據。對簡易訴訟事件之判決提起上訴，應於上訴理由中具體表明該訴訟事件所涉及之原則性法律見解。
+> 釋：為配合公文直式橫書格式，爰將第二項本文「左」列修正為「下」列。
+
+* 244 提起上訴，應以上訴狀表明下列各款事項，提出於原高等行政法院為之：一、當事人。二、高等行政法院判決，及對於該判決上訴之陳述。三、對於高等行政法院判決不服之程度，及應如何廢棄或變更之聲明。四、上訴理由。前項上訴狀內並應添具關於上訴理由之必要證據。對簡易訴訟事件之判決提起上訴，應於上訴理由中具體表明該訴訟事件所涉及之原則性法律見解。
+
+> 釋：為配合公文直式橫書格式，爰將第一項但書「左」列修正為「下」列。
 
 * 245 上訴狀內未表明上訴理由者，上訴人應於提起上訴後二十日內提出理由書於原高等行政法院；未提出者，毋庸命其補正，由原高等行政法院以裁定駁回之。判決宣示或公告後送達前提起上訴者，前項期間應自判決送達後起算。
 
@@ -556,7 +668,9 @@
 
 * 252 最高行政法院就其受理事件，對所適用之法律，確信有牴觸憲法之疑義時，得以裁定停止訴訟程序，聲請大法官解釋。
 
-* 253 最高行政法院之判決不經言詞辯論為之。但有左列情形之一者，得依職權或依聲請行言詞辯論：一、法律關係複雜或法律見解紛歧，有以言詞辯明之必要者。二、涉及專門知識或特殊經驗法則，有以言詞說明之必要者。三、涉及公益或影響當事人權利義務重大，有行言詞辯論之必要者。言詞辯論應於上訴聲明之範圍內為之。
+* 253 最高行政法院之判決不經言詞辯論為之。但有下列情形之一者，得依職權或依聲請行言詞辯論：一、法律關係複雜或法律見解紛歧，有以言詞辯明之必要。二、涉及專門知識或特殊經驗法則，有以言詞說明之必要。三、涉及公益或影響當事人權利義務重大，有行言詞辯論之必要。言詞辯論應於上訴聲明之範圍內為之。
+
+> 釋：為配合公文直式橫書格式，爰將第一項本文「左」列修正為「下」列。
 
 * 254 除別有規定外，最高行政法院應以高等行政法院判決確定之事實為判決基礎。以違背訴訟程序之規定為上訴理由時，所舉違背之事實，及以違背法令確定事實或遺漏事實為上訴理由時，所舉之該事實，最高行政法院得斟酌之。依前條第一項但書行言詞辯論所得闡明或補充訴訟關係之資料，最高行政法院亦得斟酌之。
 
@@ -568,7 +682,9 @@
 
 * 258 除第二百四十三條第二項第一款至第五款之情形外，高等行政法院判決違背法令而不影響裁判之結果者，不得廢棄原判決。
 
-* 259 經廢棄原判決而有左列各款情形之一者，最高行政法院應就該事件自為判決：一、因其於確定之事實或依法得斟酌之事實，不適用法規或適用不當廢棄原判決，而事件已可依該事實為裁判者。二、因事件不屬行政法院之權限，而廢棄原判決者。三、依第二百五十三條第一項行言詞辯論者。
+* 259 經廢棄原判決而有下列各款情形之一者，最高行政法院應就該事件自為判決：一、因基於確定之事實或依法得斟酌之事實，不適用法規或適用不當廢棄原判決，而事件已可依該事實為裁判。二、因事件不屬行政法院之權限，而廢棄原判決。三、依第二百五十三條第一項行言詞辯論。
+
+> 釋：一、為配合公文直式橫書格式，爰將「左」列修正為「下」列。二、第一款條文用語不當，酌為修正。
 
 * 260 除別有規定外，經廢棄原判決者，最高行政法院應將該事件發回原高等行政法院或發交其他高等行政法院。前項發回或發交判決，就高等行政法院應調查之事項，應詳予指示。受發回或發交之高等行政法院，應以最高行政法院所為廢棄理由之法律上判斷為其判決基礎。
 
@@ -594,11 +710,19 @@
 
 * 271 依本編規定，應為抗告而誤為異議者，視為已提起抗告；應提出異議而誤為抗告者，視為已提出異議。
 
-* 272 民事訴訟法第四百八十九條至第四百九十二條及第四百九十四條之規定，於本編準用之。
+* 272 民事訴訟法第四百九十條至第四百九十二條及第四百九十五條之一第一項之規定，於本編準用之。
 
-* 273 有左列各款情形之一者，得以再審之訴對於確定終局判決聲明不服。但當事人已依上訴主張其事由或知其事由而不為主張者，不在此限：一、適用法規顯有錯誤者。二、判決理由與主文顯有矛盾者。三、判決法院之組織不合法者。四、依法律或裁判應迴避之法官參與裁判者。五、當事人於訴訟未經合法代理或代表者。六、當事人知他造之住居所，指為所在不明而與涉訟者。但他造已承認其訴訟程序者，不在此限。七、參與裁判之法官關於該訴訟違背職務，犯刑事上之罪者。八、當事人之代理人、代表人、管理人或他造或其他代理人、代表人、管理人關於該訴訟有刑事上應罰之行為，影響於判決者。九、為判決基礎之證物係偽造或變造者。十、證人、鑑定人或通譯就為判決基礎之證言、鑑定或通譯為虛偽陳述者。十一、為判決基礎之民事或刑事判決及其他裁判或行政處分，依其後之確定裁判或行政處分已變更者。十二、當事人發見就同一訴訟標的在前已有確定判決或和解或得使用該判決或和解者。十三、當事人發見未經斟酌之證物或得使用該證物者。但以如經斟酌可受較有利益之裁判者為限。十四、原判決就足以影響於判決之重要證物漏未斟酌者。確定終局判決所適用之法律或命令，經司法院大法官依當事人之聲請解釋為牴觸憲法者，其聲請人亦得提起再審之訴。第一項第七款至第十款情形，以宣告有罪之判決已確定，或其刑事訴訟不能開始或續行非因證據不足者為限，得提起再審之訴。
+> 釋：一、法規對某一事項規定適用或準用其他法規之規定者，其他法規修正後，適用或準用修正後之法規，中央法規標準法第十七條定有明文。二、高等行政法院對於抗告逾期者，於民事訴訟法九十二年二月七日修正前，可依行政訴訟法第二百七十二條準用民事訴訟法第四百九十條第二項規定，逕以裁定駁回之。惟民事訴訟法第四百九十條第二項規定已修正，並增列第四百九十五條之一第一項，致高等行政法院對於抗告不合法者，究應以裁定駁回，或檢卷送最高行政法院，由最高行政法院裁定駁回，發生疑義。三、又，民事訴訟法第四百八十九條及第四百九十四條之規定業已刪除。四、爰配合民事訴訟法之修正，於本條刪除準用民事訴訟法第四百八十九條、第四百九十四條，增訂準用民事訴訟法第四百九十五條之一第一項之規定，以臻明確。
+
+* 273 有下列各款情形之一者，得以再審之訴對於確定終局判決聲明不服。但當事人已依上訴主張其事由或知其事由而不為主張者，不在此限：一、適用法規顯有錯誤。二、判決理由與主文顯有矛盾。三、判決法院之組織不合法。四、依法律或裁判應迴避之法官參與裁判。五、當事人於訴訟未經合法代理或代表。六、當事人知他造之住居所，指為所在不明而與涉訟。但他造已承認其訴訟程序者，不在此限。七、參與裁判之法官關於該訴訟違背職務，犯刑事上之罪。八、當事人之代理人、代表人、管理人或他造或其代理人、代表人、管理人關於該訴訟有刑事上應罰之行為，影響於判決。九、為判決基礎之證物係偽造或變造。十、證人、鑑定人或通譯就為判決基礎之證言、鑑定或通譯為虛偽陳述。十一、為判決基礎之民事或刑事判決及其他裁判或行政處分，依其後之確定裁判或行政處分已變更。十二、當事人發現就同一訴訟標的在前已有確定判決或和解或得使用該判決或和解。十三、當事人發現未經斟酌之證物或得使用該證物。但以如經斟酌可受較有利益之裁判為限。十四、原判決就足以影響於判決之重要證物漏未斟酌。確定終局判決所適用之法律或命令，經司法院大法官依當事人之聲請解釋為牴觸憲法者，其聲請人亦得提起再審之訴。第一項第七款至第十款情形，以宣告有罪之判決已確定，或其刑事訴訟不能開始或續行非因證據不足者為限，得提起再審之訴。
+
+> 釋：一、為配合公文直式橫書格式，爰將第一項本文「左」列修正為「下」列。二、第一項第十二款、第十三款文字用語不當，予以修正。
 
 * 274 為判決基礎之裁判，如有前條所定之情形者，得據以對於該判決提起再審之訴。
+
+* 274.1 再審之訴，行政法院認無再審理由，判決駁回後，不得以同一事由對於原確定判決或駁回再審之訴之確定判決，更行提起再審之訴。
+
+> 釋：一、本條新增。二、按行政訴訟之當事人，對於行政法院所為裁定，聲請再審，經駁回後，不得復以同一原因，又對該駁回再審聲請之裁定更行聲請再審，固經最高行政法院四十六年裁字第四十一號著有判例，惟當事人對於原確定判決提起再審之訴，經行政法院認無再審理由，判決駁回確定後，依現行規定，並未限制當事人對此駁回再審之訴之確定判決不得提起再審之訴，為避免當事人一再以同一事由提起再審之訴，致浪費行政法院資源，爰參照民事訴訟法第四百九十八條之一之規定，增訂本條規定。
 
 * 275 再審之訴專屬為判決之原行政法院管轄。對於審級不同之行政法院就同一事件所為之判決提起再審之訴者，由最高行政法院合併管轄之。對於最高行政法院之判決，本於第二百七十三條第一項第九款至第十四款事由聲明不服者，雖有前二項之情形，仍專屬原高等行政法院管轄。
 
@@ -606,7 +730,9 @@
 
 > 釋：一、按不得上訴之判決，於宣示或公告後，不待送達，即已確定；得上訴之判決，如得提起上訴之人均於送達前捨棄上訴權或撤回上訴者，其判決亦於送達前確定。此類判決，當事人於判決確定時尚未受送達，難以判斷有無再審理由，又於判決確定後受送達時，是否即屬第二項但書所定「再審之理由知悉在後」之情形，亦易滋疑義。爰參考民事訴訟法第五百條第二項之規定，修正本條第二項，明定其判決於送達前確定者，再審期間自送達時起算。而其再審之理由發生或知悉在後者，則均自知悉時起算，以期明確。二、第五項新增。三、再審之目的，固在匡正確定終局判決之不當，以保障當事人之權益。惟確定判決之安定性亦應兼顧，故於判決確定後經過五年，除有特定之再審原因外，再審之訴即不許提起，此為第四項所明定。惟依此規定，當事人就同一實體法律關係，對於駁回再審之訴之確定判決，又提起再審之訴，如亦自再審判決確定時起算五年之起訴期間，將導致當事人就本質上同一之實體法律關係，於判決確定後，得一再提起再審之訴，而為無謂之爭執，虛耗司法資源，自應予以限制，爰增訂第五項，明定對於再審之訴之確定判決，又提起再審之訴者，其起訴期間應自第一次判決確定時起算。但如再審判決為全部或一部廢棄原確定判決時，則對再審判決提起再審之訴，其起訴期間，應自該再審判決確定時起算。
 
-* 277 再審之訴，應以訴狀表明左列各款事項，並添具確定終局判決繕本，提出於管轄行政法院為之：一、當事人。二、聲明不服之判決及提起再審之訴之陳述。三、應於如何程度廢棄原判決及就本案如何判決之聲明。四、再審理由及關於再審理由並遵守不變期間之證據。再審訴狀內，宜記載準備本案言詞辯論之事項。
+* 277 再審之訴，應以訴狀表明下列各款事項，並添具確定終局判決繕本，提出於管轄行政法院為之：一、當事人。二、聲明不服之判決及提起再審之訴之陳述。三、應於如何程度廢棄原判決及就本案如何判決之聲明。四、再審理由及關於再審理由並遵守不變期間之證據。再審訴狀內，宜記載準備本案言詞辯論之事項。
+
+> 釋：為配合公文直式橫書格式，爰將第一項本文「左」列修正為「下」列。
 
 * 278 再審之訴不合法者，行政法院應以裁定駁回之。再審之訴顯無再審理由者，得不經言詞辯論，以判決駁回之。
 
@@ -624,7 +750,9 @@
 
 * 285 重新審理之聲請準用第二百七十五條第一項、第二項管轄之規定。
 
-* 286 聲請重新審理，應以聲請狀表明左列各款事項，提出於管轄行政法院為之：一、聲請人及原訴訟之兩造當事人。二、聲請重新審理之事件，及聲請重新審理之陳述。三、就本案應為如何判決之聲明。四、聲請理由及關於聲請理由並遵守不變期間之證據。聲請狀內，宜記載準備本案言詞辯論之事項。
+* 286 聲請重新審理，應以聲請狀表明下列各款事項，提出於管轄行政法院為之：一、聲請人及原訴訟之兩造當事人。二、聲請重新審理之事件，及聲請重新審理之陳述。三、就本案應為如何判決之聲明。四、聲請理由及關於聲請理由並遵守不變期間之證據。聲請狀內，宜記載準備本案言詞辯論之事項。
+
+> 釋：為配合公文直式橫書格式，爰將第一項本文「左」列修正為「下」列。
 
 * 287 聲請重新審理不合法者，行政法院應以裁定駁回之。
 
@@ -667,6 +795,10 @@
 * 306 高等行政法院為辦理強制執行事務，得設執行處，或囑託普通法院民事執行處或行政機關代為執行。執行程序，除本法別有規定外，應視執行機關為法院或行政機關而分別準用強制執行法或行政執行法之規定。債務人對第一項囑託代為執行之執行名義有異議者，由高等行政法院裁定之。
 
 * 307 債務人異議之訴，由高等行政法院受理；其餘有關強制執行之訴訟，由普通法院受理。
+
+* 307.1 民事訴訟法之規定，除本法已規定準用者外，與行政訴訟性質不相牴觸者，亦準用之。
+
+> 釋：一、本條新增。二、行政訴訟法準用民事訴訟法之方式，原係採取列舉準用，除在個別法條明定準用民事訴訟法之法條外，並在個別編章節末以一條文列舉準用民事訴訟法之法條。此方式固有助於法律明確性及可預見性，惟有掛一漏萬之虞，又無法及時因應民事訴訟法之修正。再者，因採取列舉準用而排除類推適用，則行政訴訟法將無法因應民事訴訟法立法變動及理論發展。爰參酌德、日立法例，增訂概括性準用規定。增訂本條後，本條之前之準用規定即為例示規定，自不待言。
 
 * 308 本法自公布日施行。本法修正條文施行日期，由司法院以命令定之。
 
