--- a/行政-內政/著作權法.md
+++ b/行政-內政/著作權法.md
@@ -146,9 +146,9 @@
 
 * 52 為報導、評論、教學、研究或其他正當目的之必要，在合理範圍內，得引用已公開發表之著作。
 
-* 53 已公開發表之著作，得為視覺障礙者、聽覺機能障礙者以點字、附加手語翻譯或文字重製之。以增進視覺障礙者、聽覺機能障礙者福利為目的，經依法立案之非營利機構或團體，得以錄音、電腦、口述影像、附加手語翻譯或其他方式利用已公開發表之著作，專供視覺障礙者、聽覺機能障礙者使用。
+* 53 已公開發表之著作，得為視覺障礙者、學習障礙者、聽覺機能障礙者或其他視、聽覺認知有障礙者以點字、附加手語翻譯或文字重製之。以增進視覺障礙者、學習障礙者、聽覺機能障礙者或其他視、聽覺認知有障礙者福利為目的，經依法立案之非營利機構或團體，得以錄音、電腦、口述影像、附加手語翻譯或其他方式利用已公開發表之著作，專供視覺障礙者、學習障礙者、聽覺機能障礙者或其他視、聽覺認知有障礙者使用。
 
-> 釋：一、修正第一項。原條文關於有利於身體障礙者之合理使用，僅限於為利於視覺障礙者之利用，並不包括聽覺機能障礙者，爰增列得以附加手語翻譯或文字重製之；另依「身心障礙者保護法」之用詞，將原條文「盲人」修正為「視覺障礙者」。二、修正第二項，擴大適用範圍。原條文第二項所稱「主管機關」原係指負責視覺障礙者福利之社會福利主管機關，並非本法之主管機關。又本條之立法意旨在為障礙者福利之目的下，提供合理使用之空間，其利用主體不必以經社會福利主管機關許可之機構或團體為限，祇要依法立案之非營利性質者即為適當，爰予修正。
+> 釋：為開放學習障礙學生合法使用有聲書，保障學習障礙學生學習之權利，爰於原條文內增訂視覺障礙者、學習障礙者、聽覺機能障礙者或其他視、聽覺認知有障礙者為合法使用有聲書之對象。
 
 * 54 中央或地方機關、依法設立之各級學校或教育機構辦理之各種考試，得重製已公開發表之著作，供為試題之用。但已公開發表之著作如為試題者，不適用之。
 
